force-app/main/default/objects/Commission_Detail_DEC__c/fields/Credit_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type_Name__c</fullName>
    <description>Credit Type Name</description>
    <inlineHelpText>Credit Type Name</inlineHelpText>
    <label>Credit Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>