force-app/main/default/objects/Commission_Detail_DEC__c/fields/Is_Held__c.field-meta.xml
<CustomField>
    <fullName>Is_Held__c</fullName>
    <description>Is Held</description>
    <inlineHelpText>Is Held</inlineHelpText>
    <label>Is Held</label>
    <length>10</length>
    <type>Text</type>
</CustomField>