force-app/main/default/objects/Commission_Detail_DEC__c/fields/Order_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Code__c</fullName>
    <description>Order Code</description>
    <inlineHelpText>Order Code</inlineHelpText>
    <label>Order Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>