force-app/main/default/objects/Commission_Detail_DEC__c/fields/Period_Name__c.field-meta.xml
<CustomField>
    <fullName>Period_Name__c</fullName>
    <description>Period Name</description>
    <inlineHelpText>Period Name</inlineHelpText>
    <label>Period Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>