force-app/main/default/objects/Commission_Detail_DEC__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Product Category</description>
    <inlineHelpText>Product Category</inlineHelpText>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>