force-app/main/default/objects/Commission_Detail_DEC__c/fields/Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount__c</fullName>
    <description>Product Discount</description>
    <inlineHelpText>Product Discount</inlineHelpText>
    <label>Product Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>