force-app/main/default/objects/Commission_Detail_DEC__c/fields/Quota_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quota_Credit_Amount__c</fullName>
    <description>Quota Credit Amount</description>
    <inlineHelpText>Quota Credit Amount</inlineHelpText>
    <label>Quota Credit Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>