force-app/main/default/objects/Commission_Detail_DEC__c/fields/Quota_Name__c.field-meta.xml
<CustomField>
    <fullName>Quota_Name__c</fullName>
    <description>Quota Name</description>
    <inlineHelpText>Quota Name</inlineHelpText>
    <label>Quota Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>