force-app/main/default/objects/Commission_Detail_DEC__c/fields/Theatre__c.field-meta.xml
<CustomField>
    <fullName>Theatre__c</fullName>
    <description>Theatre</description>
    <inlineHelpText>Theatre</inlineHelpText>
    <label>Theatre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>