force-app/main/default/objects/Commission_Detail_DEC__c/fields/Xactly_Title__c.field-meta.xml
<CustomField>
    <fullName>Xactly_Title__c</fullName>
    <description>Xactly Title</description>
    <inlineHelpText>Xactly Title</inlineHelpText>
    <label>Xactly Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>